[package]
name = "wasm-gameboy-emulator"
version = "0.1.0"
authors = ["yukims19 <yukims19@gmail.com>"]
edition = "2018"
description = "A gameboy emulator meant for learning and to compile down to wasm"
license = "BSD"
repository = "https://github.com/yukims19/wasm-gameboy-emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
bit-vec = "0.6.1"
log = "0.4"
console_log = { version = "0.1", optional = true }
serde = "^1.0.59"
serde_derive = "^1.0.59"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]